--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 20px; }
-    .page { max-width: 500px; margin: 0 auto; }
-    input, select, textarea, button { display: block; margin: 10px 0; padding: 8px; width: 100%; }
-    nav button { width: auto; margin-right: 10px; }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="root"></div>
