feat: add settings modules for web and mobile

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Study Flex</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="planner.js"></script>
-  <script src="react-lite.js"></script>
-</head>
-<body>
-  <div id="root"></div>
-  <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Study Flex</title>
+  </head>
+  <body class="min-h-screen bg-gray-50">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
